--- a/2-dashboard-components/2-dashboard-components.qmd
+++ b/2-dashboard-components/2-dashboard-components.qmd
@@ -1,12 +1,12 @@
 ---
 title: "Dashboard components"
-subtitle: "Build-a-Dashboard Workshop"
+subtitle: "From Notebooks to Dashboards with Quarto Workshop"
 author:   
-  - name: Dr. Mine Çetinkaya-Rundel
+  - name: Sara Altman and Isabella Velásquez
     affiliations:
-      - name: Duke University
       - name: Posit, PBC
-date: "2024-08-12"
+date: "2024-09-23"
+# TODO: fix link
 footer: "[pos.it/quarto-dashboards-24](https://pos.it/quarto-dashboards-24)"
 logo: "../images/slides-logo.png"
 format:
@@ -42,9 +42,9 @@ The content of cards typically maps to *cells* in your notebook or source docume
 
 ## A note on computing language
 
--   The examples in this module will primarily feature R code in code cells
+-   The examples in this module will primarily feature Python code in code cells
 
--   All code in code cells can be replaced with Python, Julia, Observable, etc. and the layout would look exactly the same
+-   All code in code cells can be replaced with R, Julia, Observable, etc. and the layout would look exactly the same
 
 -   When/if different behavior in layout is expected, this will be explicitly called out and examples in other computing languages will also be provided
 
@@ -156,7 +156,7 @@ Special aliases are recognized for certain navigation buttons: `linkedin`, `face
 
 -   Can be at the global or page level
 
-## Sidebars - Global {auto-animate="true"}
+## Sidebars {auto-animate="true"}
 
 ::: {data-id="code"}
 ```` {.yaml filename="dashboard-r.qmd" code-line-numbers="|22-24"}
@@ -164,7 +164,7 @@ Special aliases are recognized for certain navigation buttons: `linkedin`, `face
 ````
 :::
 
-## Sidebars - Global {.smaller auto-animate="true"}
+## Sidebars {.smaller auto-animate="true"}
 
 ::: columns
 ::: {.column width="40%"}
@@ -180,7 +180,7 @@ Special aliases are recognized for certain navigation buttons: `linkedin`, `face
 :::
 :::
 
-## Sidebars - Global {.smaller auto-animate="true"}
+## Sidebars {.smaller auto-animate="true"}
 
 ::: columns
 ::: {.column width="40%"}
@@ -193,46 +193,6 @@ Special aliases are recognized for certain navigation buttons: `linkedin`, `face
 
 ::: {.column width="60%"}
 ![](images/sidebars-global-bar.png)
-:::
-:::
-
-## Sidebars - Page {auto-animate="true"}
-
-::: {data-id="code"}
-```` {.yaml filename="dashboard-r.qmd" code-line-numbers="|22-28"}
-{{< include _sidebar-page.qmd >}}
-````
-:::
-
-## Sidebars - Page {.smaller auto-animate="true"}
-
-::: columns
-::: {.column width="40%"}
-::: {data-id="code"}
-```` {.yaml filename="dashboard-r.qmd" code-line-numbers="22-28"}
-{{< include _sidebar-page.qmd >}}
-````
-:::
-:::
-
-::: {.column width="60%"}
-![](images/sidebars-page-scatter.png)
-:::
-:::
-
-## Sidebars - Page {.smaller auto-animate="true"}
-
-::: columns
-::: {.column width="40%"}
-::: {data-id="code"}
-```` {.yaml filename="dashboard-r.qmd" code-line-numbers="22-28"}
-{{< include _sidebar-page.qmd >}}
-````
-:::
-:::
-
-::: {.column width="60%"}
-![](images/sidebars-page-bar.png)
 :::
 :::
 
@@ -370,49 +330,6 @@ Setting `orientation` to `columns` makes each `##` indicate a column instead of 
 :::
 :::
 
-## `fill` vs. `flow`
-
-::: incremental
--   Each row in a dashboard that is not given an explicit height will determine its size by either `fill`ing available space or by `flow`ing to its natural height
-
--   `fill`ling layout is generally the default, however for certain types of content (e.g., markdown text) `flow` layout is the default.
-
--   If the default behavior is not what you want, you can explicitly specify filling or flowing behavior using the `.fill` and `.flow` classes applied to a row.
-
-    ```` {.yaml filename="dashboard-r.qmd"}
-    ## Row {.fill}
-
-    ## Row {.flow}
-    ````
-:::
-
-## `scrolling`
-
-Need more space?
-Set `scrolling: true` for accommodate page overflow.
-
-``` yaml
----
-format: 
-  dashboard:
-    scrolling: true 
----
-```
-
-. . .
-
-::: callout-note
-This option is handy for adding more rows of cards to a dashboard, however spreading content across **pages** and **tabsets** can be a better way to present information.
-:::
-
-## Per page controls {.smaller}
-
-`orientation` and `scrolling` can be provided at the dashboard or page level:
-
-```` {.yaml filename="dashboard-r.qmd" code-line-numbers="|12|24"}
-{{< include _per-page-controls.qmd >}}
-````
-
 ## Tabsets {auto-animate="true"}
 
 ::: {data-id="code"}
@@ -522,58 +439,6 @@ d.
 :::
 ::: {.column width=20%}
 ![](images/slido.png)
-:::
-:::
-
-## Multiple outputs {.smaller auto-animate="true"}
-
-If a cell generates multiple outputs, they get wrapped in a single cell:
-
-::: {data-id="code"}
-```` {.yaml filename="dashboard-r.qmd" code-line-numbers="|14-15|17-18"}
-{{< include _card-multiple-outputs-r.qmd >}}
-````
-:::
-
-## Multiple outputs {.smaller auto-animate="true"}
-
-::: columns
-::: {.column width="40%"}
-::: {data-id="code"}
-```` {.yaml filename="dashboard-r.qmd" code-line-numbers="14-15,17-18"}
-{{< include _card-multiple-outputs-r.qmd >}}
-````
-:::
-:::
-
-::: {.column width="60%"}
-![](images/card-multiple-outputs.png)
-:::
-:::
-
-## Multiple output layout {.smaller auto-animate="true"}
-
-You can control layout of multiple outputs with `layout-ncol`:
-
-::: {data-id="code"}
-```` {.yaml filename="dashboard-r.qmd" code-line-numbers="|14"}
-{{< include _card-multiple-output-layout-r.qmd >}}
-````
-:::
-
-## Multiple output layout {.smaller auto-animate="true"}
-
-::: columns
-::: {.column width="40%"}
-::: {data-id="code"}
-```` {.yaml filename="dashboard-r.qmd" code-line-numbers="14"}
-{{< include _card-multiple-output-layout-r.qmd >}}
-````
-:::
-:::
-
-::: {.column width="60%"}
-![](images/card-multiple-output-layout.png)
 :::
 :::
 
