--- a/3-theming-styling/3-theming-styling.qmd
+++ b/3-theming-styling/3-theming-styling.qmd
@@ -1,12 +1,11 @@
 ---
 title: "Theming and styling"
-subtitle: "Build-a-Dashboard Workshop"
+subtitle: "From Notebooks to Dashboards with Quarto Workshop"
 author:   
-  - name: Dr. Mine Çetinkaya-Rundel
+  - name: Sara Altman and Isabella Velásquez
     affiliations:
-      - name: Duke University
       - name: Posit, PBC
-date: "2024-08-12"
+date: "2024-09-23"
 footer: "[pos.it/quarto-dashboards-24](https://pos.it/quarto-dashboards-24)"
 logo: "../images/slides-logo.png"
 format:
@@ -55,48 +54,6 @@ Quarto dashboards can be styled with one of the 25 themes from the Bootswatch pr
 <iframe src="https://bootswatch.com" title = "Bootswatch themes" frameborder="1" height="500" width="1000"></iframe>
 ```
 
-## Light and dark mode {.smaller auto-animate="true"}
-
-You can provide a light and dark theme and Quarto will automatically place a light/dark toggle on the navbar:
-
-::: {data-id="code"}
-```` {.yaml filename="dashboard-r.qmd" code-line-numbers="|3-7"}
-{{< include _light-dark.qmd >}}
-````
-:::
-
-## Light mode {.smaller auto-animate="true"}
-
-::: columns
-::: {.column width="40%"}
-::: {data-id="code"}
-```` {.yaml filename="dashboard-r.qmd" code-line-numbers="6"}
-{{< include _light-dark.qmd >}}
-````
-:::
-:::
-
-::: {.column width="60%"}
-![](images/light.png)
-:::
-:::
-
-## Dark mode {.smaller auto-animate="true"}
-
-::: columns
-::: {.column width="40%"}
-::: {data-id="code"}
-```` {.yaml filename="dashboard-r.qmd" code-line-numbers="7"}
-{{< include _light-dark.qmd >}}
-````
-:::
-:::
-
-::: {.column width="60%"}
-![](images/dark.png)
-:::
-:::
-
 ## Custom themes
 
 ::: incremental
@@ -117,44 +74,6 @@ You can provide a light and dark theme and Quarto will automatically place a lig
     ````
 :::
 
-## Custom light SCSS {.smaller auto-animate="true"}
-
-::: columns
-::: {.column width="40%"}
-::: {data-id="code"}
-```` {.yaml filename="dashboard-r.qmd" code-line-numbers="|3-5"}
-{{< include _custom-light.qmd >}}
-````
-:::
-:::
-
-::: {.column width="60%"}
-![](images/custom-light.png)
-:::
-:::
-
-## Custom light SCSS {.smaller}
-
-```` {.yaml filename="dashboard-r.qmd" code-line-numbers="|1-7|9-12|14-19"}
-{{< include _custom-light.scss >}}
-````
-
-## Customizing Bootswatch themes 
-
-::: columns
-::: {.column width="40%"}
-::: {data-id="code"}
-```` {.yaml filename="dashboard-r.qmd" code-line-numbers="|5-7"}
-{{< include _custom-sandstone.qmd >}}
-````
-:::
-:::
-
-::: {.column width="60%"}
-![](images/sandstone-custom-light.png)
-:::
-:::
-
 # Styling
 
 ## A unified look
@@ -171,14 +90,8 @@ You can provide a light and dark theme and Quarto will automatically place a lig
 
 ## Start
 
-::: r-box
--   Option 1 - Cloud: Go to Posit Cloud for the workshop, open project titled `3 - Theming and styling`.
-
--   Option 2 - Local: Clone the GitHub repo `posit-conf-2024/olympicdash` (<https://github.com/posit-conf-2024/olympicdash>) and work on `olympicdash-r-3.qmd.`
-:::
-
 ::: python-box
-Python - Local: Clone the GitHub repo `posit-conf-2024/olympicdash` (<https://github.com/posit-conf-2024/olympicdash>) and work on `olympicdash-py-3.qmd.`
+Clone the GitHub repo `posit-conf-2024/olympicdash` (<https://github.com/posit-conf-2024/olympicdash>) and work on `olympicdash-py-3.qmd.`
 :::
 
 ## Goal
@@ -205,20 +118,6 @@ Work with your neighbor if you're having difficulty finding which theme to use.
 ## Step 2 {.smaller}
 
 ::: your-turn
-Add an SCSS file for custom styling and use it to augment the Bootswatch theme to get dashboard theme elements as close to the final goal as you can.
-:::
-
-::: callout-tip
-Use a tool like the Digital Color Picker to identify colors to be set.
-:::
-
-![](images/olympicdash-r-3.png)
-
-{{< countdown minutes=10 >}}
-
-## Step 3 {.smaller}
-
-::: your-turn
 Polish your plots to get them as close to the final goal as you can.
 :::
 
@@ -236,13 +135,13 @@ A lot more to learn on theming all things Quarto!
 <iframe src="https://quarto.org/docs/dashboards/theming.html" title = "Bootswatch themes" frameborder="1" height="500" width="1000"></iframe>
 ```
 
+<!--
 ## Look forward to...
 
 These may or may not happen in the near / not-so-near future, but you might want to follow them:
 
 - `_brand.yml`: <https://github.com/quarto-dev/quarto-cli/issues/10249>
 
-- Support for auto theming in quarto with the **thematic** R package: <https://github.com/rstudio/thematic/issues/125>
-
 - Improve the HTML Theming documentation page: <https://github.com/quarto-dev/quarto-cli/issues/8654>
+-->
 
