--- a/4-parameters-interactivity-deployment/index.qmd
+++ b/4-parameters-interactivity-deployment/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Parameters, interactivity, deployment"
+title: "Deploy your dashboard"
 ---
 
 ## Slides
@@ -11,11 +11,5 @@ title: "Parameters, interactivity, deployment"
 ```
 ## Exercises
 
--   R:
-
-    -   Option 1 - Cloud: Go to Posit Cloud for the workshop, open project titled `4 - Parameters, interactivity, and deployment`.
-
-    -   Option 2 - Local: Clone the GitHub repo `posit-conf-2024/olympicdash` (<https://github.com/posit-conf-2024/olympicdash>) and work on `olympicdash-r-4.qmd.`
-
--   Python - Local: Clone the GitHub repo `posit-conf-2024/olympicdash` (<https://github.com/posit-conf-2024/olympicdash>) and work on `olympicdash-py-4.qmd.`
+-   Clone the GitHub repo `posit-dev/small-data-sf-olympicdash` (<https://github.com/posit-dev/small-data-sf-olympicdash>) and work on `olympicdash-py-4.qmd.`
 
