--- a/2-dashboard-components/index.qmd
+++ b/2-dashboard-components/index.qmd
@@ -12,10 +12,4 @@ title: "Dashboard components"
 
 ## Exercises
 
--   R:
-
-    -   Option 1 - Cloud: Go to Posit Cloud for the workshop, open project titled `2 - Dashboard components`.
-
-    -   Option 2 - Local: Clone the GitHub repo `posit-conf-2024/olympicdash` (<https://github.com/posit-conf-2024/olympicdash>) and work on `olympicdash-r-2.qmd.`
-
--   Python - Local: Clone the GitHub repo `posit-conf-2024/olympicdash` (<https://github.com/posit-conf-2024/olympicdash>) and work on `olympicdash-py-2.qmd.`
+-   Clone the GitHub repo `posit-dev/small-data-sf-olympicdash` (<https://github.com/posit-dev/small-data-sf-olympicdash>) and work on `olympicdash-py-2.qmd.`
