--- a/setup.qmd
+++ b/setup.qmd
@@ -2,46 +2,35 @@
 title: "Setup instructions"
 ---
 
-Prior to the workshop check you have the required software and set up any accounts you might need for publishing your dashboard.
+**1. Software:** Download and install Python and Quarto:
 
-## Software
+-   Python 3: <https://www.python.org/downloads/>
+-   Quarto 1.5.53: <https://quarto.org/docs/get-started/>
 
-You will be able to follow along with this workshop in R or in Python.
-See the required software suite for each language below.
+**2. Tools:** Dowload and install VS Code and Jupyter and Quarto extensions.
 
-### R
+-   VS Code: <https://code.visualstudio.com/>
+-   Quarto Extension: <https://marketplace.visualstudio.com/items?itemName=quarto.quarto>
+-   Jupyter Extension: <https://marketplace.visualstudio.com/items?itemName=ms-toolsai.jupyter>
 
--   [R](https://cran.r-project.org): 4.4.1
+**3. Exercises:** Go to [`pos.it/smalldatasf-quarto-exercises`](https://pos.it/smalldatasf-quarto-exercises), click on "Use this template" then "Create a new repository". Click on the green *Code* button and copy the URL of the repo.
 
--   [Quarto](https://quarto.org/docs/download/): v1.5
+**4. Packages:** Open VS Code. Under *Start*, click on *Clone Git Repository*, and paste the URL of the repo. Open the cloned project. In the Command Palette, go to `Python: Create Environment...` and choose `Venv`, then choose the (latest) Python version you have installed. Check the box for `requirements.txt` in the "Select dependencies to install" menu and hit OK.
 
--   [RStudio](https://posit.co/download/rstudio-desktop/): 2024.04.2+764
+::: callout-note
+The packages you need are as follows:
 
--   Packages:
-
-```{r}
-#| eval: false
-
-pkg_list <- c(
-  "tidyverse", "gt", "ggthemes", "DT", "here", "paletteer"
-)
-install.packages(pkg_list)
-```
-
-### Python
-
--   [Python](https://www.python.org/downloads/): 3
--   [Quarto](https://quarto.org/docs/download/): v1.5
--   [VS Code](https://code.visualstudio.com/download) as well as the [VS Code Quarto Extension](https://marketplace.visualstudio.com/items?itemName=quarto.quarto) and [VS Code Jupyter Extension](https://marketplace.visualstudio.com/items?itemName=ms-toolsai.jupyter)
--   Packages: We recommend `pip install`ing the following packages. If you have a different preferred way of managing your environment, you’re welcomed to do so. Just make sure you have these packages installed in order to be able to follow along with the examples.
-
-```         
-great_tables==0.10.0
+``` {.bash filename="requirements.txt"}
+great_tables==0.9.0
 ipykernel==6.29.5
 jupyter==1.0.0
+palmerpenguins==0.1.4
 pandas==2.2.2
 plotnine==0.13.6
 ```
+
+If you have a different preferred way of managing your environment, you're welcomed to do so. Just make sure you have these packages installed in order to be able to follow along with the examples. 
+:::
 
 ## Publishing accounts
 
@@ -49,15 +38,5 @@ You do not need to publish your dashboard during the workshop, but it would be g
 
 To publish your website you'll need an account on one of Quarto's publishing venues:
 
--   **(Recommended)** [Quarto Pub](https://quartopub.com/sign-up)
--   [GitHub](https://github.com) only **if you are already** a Git/GitHub user
-
-## Discord
-
-We're not going to be making heavy use of Discord during the workshop, but it's a great place to share code snippets for questions that come up or (inevitable) typos that need to be fixed.
-
-More importantly, it's a great place to connect with other conference attendees.
-
--   [pos.it/conf-event-portal](http://pos.it/conf-event-portal) \> Login
--   Click on "Join Discord, the virtual networking platform!"
--   Browse Channels -\> #workshop-quarto-dashboards
+-   **(Recommended)** [Posit Connect Cloud](https://connect.posit.cloud/) if you are already a Git/GitHub user
+-   [Quarto Pub](https://quartopub.com/sign-up)
