--- a/index.qmd
+++ b/index.qmd
@@ -19,7 +19,9 @@ Quarto is an innovative, open-source publishing system from Posit that transform
 
 ## Instructor(s)
 
-[to add]
+
+
+**Isabella Velásquez** is a Senior Product Marketing Manager at Posit Software, where she develops strategic content to increase brand visibility and drive product adoption. With a background in data analysis, reporting, and visualization using tools like R, SQL, and Python, Isabella has honed her skills across multiple industries, including her previous role at the Bill & Melinda Gates Foundation. She holds an MS in Analytics and a BA in Economics and East Asian Languages and Civilizations from the University of Chicago. Isabella is also an educator, sharing her expertise in data science as an instructor and teaching assistant at the University of Tennessee, Knoxville and the University of Chicago.
 
 ------------------------------------------------------------------------
 
