--- a/3-deployment/3-deployment.qmd
+++ b/3-deployment/3-deployment.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Deploy your dashboard"
-subtitle: "From Notebooks to Dashboards with Quarto Workshop"
+subtitle: "Small Data SF"
 author:   
   - name: Sara Altman and Isabella Velásquez
     affiliations:
@@ -97,7 +97,7 @@ Using [ShinyLive](https://posit-dev.github.io/r-shinylive/)
 ## Start
 
 ::: python-box
-Clone the GitHub repo `posit-dev/small-data-sf-olympicdash` (<https://github.com/posit-dev/small-data-sf-olympicdash>) and work on `olympicdash-py-4.qmd.`
+Clone the GitHub repo `posit-dev/smalldatasf-quarto-exercises` (<http://pos.it/smalldatasf-quarto-exercises>) and work on `olympicdash-py-4.qmd.`
 :::
 
 ## Goal
