--- a/2-components-theming/2-components-theming.qmd
+++ b/2-components-theming/2-components-theming.qmd
@@ -2,12 +2,14 @@
 title: "Dashboard components and themes"
 subtitle: "Small Data SF"
 author:   
-  - name: Sara Altman and Isabella Velásquez
+  - name: Sara Altman
+    affiliations:
+      - name: Posit, PBC
+  - name: Isabella Velásquez
     affiliations:
       - name: Posit, PBC
 date: "2024-09-23"
-# TODO: fix link
-footer: "[pos.it/quarto-dashboards-24](https://pos.it/quarto-dashboards-24)"
+footer: "[pos.it/small-data-sf-quarto-workshop](https://pos.it/small-data-sf-quarto-workshop)"
 logo: "../images/slides-logo.png"
 format:
   revealjs:
