--- a/3-deployment/3-deployment.qmd
+++ b/3-deployment/3-deployment.qmd
@@ -2,11 +2,14 @@
 title: "Deploy your dashboard"
 subtitle: "Small Data SF"
 author:   
-  - name: Sara Altman and Isabella Velásquez
+  - name: Sara Altman
+    affiliations:
+      - name: Posit, PBC
+  - name: Isabella Velásquez
     affiliations:
       - name: Posit, PBC
 date: "2024-09-23"
-footer: "[pos.it/quarto-dashboards-24](https://pos.it/quarto-dashboards-24)"
+footer: "[pos.it/small-data-sf-quarto-workshop](https://pos.it/small-data-sf-quarto-workshop)"
 logo: "../images/slides-logo.png"
 format:
   revealjs:
